<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="@dimen/item_vertical_depense_margin">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/caddie" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_title"
        style="@style/TitleTextStyle"
        android:layout_marginLeft="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        android:layout_marginRight="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2"/>

    <TextView
        android:id="@+id/libelle_title"
        style="@style/SubtitleTextStyle"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_libelle"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/libelle_input"
        style="@style/DefaultTextStyle"
        android:layout_marginTop="@dimen/item_vertical_depense_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_libelle_input"
        app:layout_constraintStart_toStartOf="@+id/libelle_title"
        app:layout_constraintTop_toBottomOf="@+id/libelle_title" />


    <TextView
        android:id="@+id/date_input"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_height="wrap_content"
        android:text="@string/detail_date"
        app:layout_constraintBottom_toBottomOf="@+id/libelle_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/libelle_title"/>


    <TextView
        android:id="@+id/montant_title"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_Montant_title"
        android:layout_marginTop="@dimen/margin_separator_detail"
        app:layout_constraintStart_toStartOf="@+id/libelle_input"
        app:layout_constraintTop_toBottomOf="@+id/libelle_input" />


    <TextView
        android:id="@+id/montant_input"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_Montant"
        android:layout_marginTop="@dimen/item_vertical_depense_margin"
        app:layout_constraintStart_toStartOf="@+id/montant_title"
        app:layout_constraintTop_toBottomOf="@+id/montant_title" />

    <TextView
        android:id="@+id/description_title"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_separator_detail"
        android:text="@string/detail_description"
        app:layout_constraintStart_toStartOf="@+id/montant_input"
        app:layout_constraintTop_toBottomOf="@+id/montant_input" />

    <TextView
        android:id="@+id/description_input"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_vertical_depense_margin"
        android:text="@string/detail_description_input"
        app:layout_constraintStart_toStartOf="@+id/description_title"
        app:layout_constraintTop_toBottomOf="@+id/description_title" />



</androidx.constraintlayout.widget.ConstraintLayout>