<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_margin">

    <TextView
        android:id="@+id/title_textView"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_ajouter_salaire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_marginTop="@dimen/default_margin"
        android:id="@+id/input_add_objet_libelle"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/ajouter_libelle_revenu"
        android:paddingLeft="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textView" />

    <EditText
        android:layout_marginTop="@dimen/default_margin"
        android:id="@+id/input_add_objet_montant"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/ajouter_Montant_revenu"
        android:inputType="numberDecimal"
        android:paddingLeft="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_add_objet_libelle" />

    <Button
        android:layout_marginTop="@dimen/default_margin"
        android:id="@+id/button_valider_objet"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/dark_blue"
        android:text="@string/solde_page_valider"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_add_objet_montant" />




</androidx.constraintlayout.widget.ConstraintLayout>