<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cyan"
    android:layout_marginBottom="@dimen/item_vertical_depense_margin">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/item_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/caddie" />
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="invisible"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/libelle_TextView"
        style="@style/DepenseStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_libelle"
        android:layout_marginLeft="@dimen/item_vertical_depense_margin"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/cardView" />


    <TextView
        android:id="@+id/date_TextView"
        style="@style/DepenseStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_date"
        android:layout_marginLeft="@dimen/item_vertical_depense_margin"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/montant_TextView"
        style="@style/DepenseStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_Montant"
        android:layout_marginRight="@dimen/item_vertical_depense_margin"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view"/>

</androidx.constraintlayout.widget.ConstraintLayout>